# hoplite

./: .gitignore  2026-05-19-013954-local-command-caveatcaveat-the-messages-below.txt  2026-05-24-213458-local-command-caveatcaveat-the-messages-below.txt  2026-05-31-015611-local-command-caveatcaveat-the-messages-below.txt  CLAUDE.md  README.md
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/scripts/: check_version_bumps.py
.github/workflows/: codeql.yml  version-bump-check.yml
.hoplite/: index.db
docs/: test.md
docs/decisions/: colon-separates-vocabulary-addresses-from-paths.md  inline-the-prose-spine-until-it-grows-large.md  prototype-the-plugin-mcp-server-in-python.md  uris-are-a-tool-layer-projection-over-relational-storage.md
docs/glossary/: README.md  affordance.md  assert.md  bm25.md  claim.md  condition.md  confidence.md  corpus.md  document.md  filter.md  fingerprint.md  frontmatter.md  ghost.md  graph.md  idf.md  infer.md  jaccard.md  literal.md  match.md  minhash.md  namespace.md  neighborhood.md  object.md  predicate.md  projection.md  ranking-function.md  relationship.md  resource.md  search-expression.md  semantic-search.md  slug.md  statement.md  subject.md  summary.md  title.md  uri.md  value.md  vocabulary.md  walk.md
docs/hoplite/: README.md  architecture.md  asserting-edges.md  defining-edges.md  expressing-edges.md  frontmatter.md  hoplite-affordances.md  hoplite-architecture.md  hoplite-authoring.md  hoplite-declare-and-describe.md  hoplite-feature-taxonomy.md  hoplite-frontmatter.md  hoplite-glossary.md  hoplite-graph.md  hoplite-navigation.md  hoplite-read-model.md  hoplite-roadmap.md  hoplite-spec-index.md  hoplite-tool-api.md  hoplite.md  readme.md  roadmap.md  schema.md  schema.proposal.md  tool-api.md
docs/journal/: 2026-05-10-2347-initial-skill-drafts-and-fail-fast-build.md  2026-05-13-0142-double-draft-new-skills-commits.md  2026-05-13-0346-reviewer-family-doc-skills-multi-pass-discipline.md  2026-05-15-1851-build-gate-preflight-and-findings-anchor.md  2026-05-16-1526-audit-mode-shipped-before-tests-ran.md  2026-05-16-1549-marketplace-rename-to-msl-armory.md  2026-05-16-2256-wiki-skills-with-github-hosted-link-rules.md  2026-05-18-0152-writing-prose-foundation-refactor.md  2026-05-20-0115-taking-notes-refactor-and-shared-slugify.md  2026-05-21-0401-mcp-runtime-thesis-and-hello-world.md  2026-05-21-0403-injection-composition-pivot.md  2026-05-22-2300-bash-heredoc-bites-the-bash-fragility-note.md  2026-05-23-1807-data-model-spec-and-cold-review-iteration.md  2026-05-24-0411-sqlite-hybrid-wins-file-based-dropped.md  2026-05-24-1701-python-toolchain-and-writing-python-skill.md  2026-05-24-1733-stub-review-findings-remediation.md  2026-05-24-1746-empty-generic-literal-rule-reversal.md  2026-05-24-1918-first-hoplite-modules.md  2026-05-24-2134-genesis-property-graph-in-sqlite.md  2026-05-25-0045-ids-py-deletion.md  2026-05-25-0046-label-as-envelope-death.md  2026-05-25-0202-crlf-frontmatter-parse-bug.md  2026-05-25-0202-dead-then-redesign-in-memory-graph-and-four-tools.md  2026-05-25-0338-os-execv-to-subprocess-run.md  2026-05-25-0413-venv-bootstrap-race.md  2026-05-25-0618-plugin-renames-skills-hoplite-armory.md  2026-05-25-1137-eav-property-graph-refactor.md  2026-05-25-1138-tag-model-evolution.md  2026-05-25-1724-fts5-rowid-bug-and-timestamped-dumps.md  2026-05-25-1836-tests-1-0-0-and-readme-rewrite.md  2026-05-25-1934-powershell-utf8-bom-trap.md  2026-05-25-1934-skill-md-to-component-and-the-repo-split.md  2026-05-25-2247-post-1-0-hygiene.md  2026-05-25-2252-venv-bootstrap-follows-the-canonical-pattern.md  2026-05-27-1600-external-links-cites-edges-and-proxies.md  2026-05-27-1830-dump-tables-singular-fts-ddl-duplication.md  2026-05-27-1845-related-edges-land-and-rank-replaces-threshold.md  2026-05-27-2230-triage-convention-crystallizes-into-a-todo-skill.md  2026-05-27-2300-pivot-from-runtime-cat-to-build-time-mail-merge.md  2026-05-29-0327-sqlite-schema-locks-frontmatter-migrates-to-class-prefixed.md  (+10 more)
docs/mcp/: behavior.md  data-model.md  decision-log.md  deferred-features.md  findings.md  hoplite-skill.md  implementation-alternatives.md  implementation-file-based.md  implementation-plan.md  implementation-sqlite-hybrid.md  implementation.md  orchestrator-skill.md  (+4 more)
plugins/hoplite/mcp/: bench_minhash.py  launch.py  pyproject.toml
plugins/hoplite/mcp/src/hoplite/: db.py  filtering.py  frontmatter.py  graph.py  migrations.py  minhash.py  models.py  mostly_dead_code_quary_only_graph.py  parser.py  row_factories.py  schema.sql  server.py  tools.py  urls.py  wikilinks.py
plugins/hoplite/mcp/tests/: test_db.py  test_filtering.py  test_migrations.py  test_minhash.py  test_resolve_wikilink.py  test_row_factories.py  test_smoke.py  test_traverse.py  test_wikilinks.py
plugins/skills/mcp/: launch.py  pyproject.toml  server.py  smoke_test.py
plugins/skills/mcp/src/hoplite/: graph.py  ids.py  minhash.py  models.py  server.py  tools.py  wikilinks.py
plugins/skills/mcp/tests/: test_filtering.py  test_ids.py  test_minhash.py  test_parser.py  test_slugify.py  test_smoke.py  test_wikilinks.py
quary/: frontmatter.md  reviewing-prose.md  writing-wiki.md
scripts/: rewrite_wikilinks.py
(+503 files in other folders)
