[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hoplite"
version = "1.0.0"
description = "MCP server for the skills plugin"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "hypothesis>=6.0",
    "types-PyYAML>=6.0.12.20260518",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["A", "E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tool function signatures mirror the MCP wire schema in
# docs/hoplite/tool-api.md, which uses `id` as the parameter name.
"src/hoplite/tools.py" = ["A002"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"

# Test files exercise pytest fixtures and hypothesis strategies, neither of
# which ships pyright-friendly type stubs. Silence those categories of noise
# in tests/ only; src/ stays in strict mode. Real type errors
# (reportAssignmentType, reportArgumentType, etc.) still surface here.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUntypedFunctionDecorator = "none"
reportMissingImports = "none"
